# Horizon

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  appveyor.yml
launcher/: CMakeLists.txt  launcher.cpp  resource.rc
src/: CMakeLists.txt
src/game/common/: bitarray.cpp  bitarray.h  buffer.cpp  buffer.h  crc.cpp  crc.h  critsection.cpp  critsection.h  dipthong.cpp  dipthong.h  fixed.h  globals.cpp  globals.h  language.h  lcw.cpp  lcw.h  noinit.h  ostimer.cpp  ostimer.h  rand.cpp  rand.h  timer.cpp  timer.h  vector.cpp  vector.h  xordelta.cpp  xordelta.h
src/game/debug/: gameassert.cpp  gameassert.h  gamedebug.h  gamelogging.cpp  gamelogging.h
src/game/engine/: abstract.cpp  abstract.h  cell.cpp  cell.h  gametypes.h  object.cpp  object.h
src/game/gfx/: blitters.cpp  blitters.h  gbuffer.cpp  gbuffer.h  mouseshape.cpp  mouseshape.h  pal.cpp  pal.h  surfacemonitor.cpp  surfacemonitor.h
src/game/io/: basefile.h  file.h
src/game/memory/: alloc.cpp  alloc.h  newdel.cpp  newdel.h
src/game/platform/: eventhandler.cpp  eventhandler.h  initvideo.cpp  initvideo.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h
src/game/ui/: link.cpp  link.h
src/hooker/: dllmain.cpp  hookcrt.h  hooker.cpp  hooker.h  setupglobals.cpp  setuphooks.cpp  setuphooks.h
